--- a/跨语言调用/application.properties
+++ b/跨语言调用/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=local
+spring.profiles.active=online
+
 kafka_start_flag=true
 
 server.servlet.context-path=/ping_manager
@@ -6,5 +7,5 @@ server.port=18081
 
 mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
 
-#服务器目标ip地址匹配字符
+#\u670D\u52A1\u5668\u76EE\u6807ip\u5730\u5740\u5339\u914D\u5B57\u7B26
 server_ip_starts=172
