--- a/消息/消息队列/kafka/springboot集成示例/application-local.properties
+++ b/消息/消息队列/kafka/springboot集成示例/application-local.properties
@@ -18,3 +18,32 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 #监听
 spring.kafka.listener.missing-topics-fatal=false
+
+
+
+#>>>>> yml格式demo
+自定义的一个前缀:
+  kafka:
+    #broker集群
+    bootstrap-servers: 10.172.65.15:32002,10.172.65.14:32002,10.172.65.12:32002
+    #消费者
+    consumer:
+      enable-auto-commit: true
+      auto-commit-interval: 1000
+      max-poll-records: 10
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    #监听
+    #如果topic不存在则启动报错，不允许通过代码创建topic，默认即true
+    listener.missing-topics-fatal: true
+    #鉴权
+    admin:
+      properties:
+        security:
+          protocol: SASL_PLAINTEXT
+          sasl.mechanism: SCRAM-SHA-256
+          sasl.jaas.config: org.apache.kafka.common.security.scram.ScramLoginModule required username="xxx" password="xxx";
+
+
+
+
